--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^24.9.2",
